2024-08-30  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha03: Swim, Rick, Swim!';git push
	git tag -a 5.2.8-alpha03 -m '';git push --tags

	* ncremap: Stop weighting accumulation to SGS values where sgs_frc_in is missing value
	Potentially serious bug most likely to affect ELM datasets whose sgs_frc = landfrac contains missing values
	Also crops-up when applying new SGS variable (e.g., Icemask) in regions where ELM may not have valid input

	* ncremap: Further improve flag and ERANGE diagnostics

2024-08-29  Charlie Zender  <zender@uci.edu>

	* nco_put_vara(): Add diagnostics for NC_ERANGE errors

	* ncremap: Add v3 regression commands

2024-08-24  Charlie Zender  <zender@uci.edu>

	* ncclimo: Add --sum_scl option for global sum timeseries

2024-08-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha02: Clean Subaru';git push
	git tag -a 5.2.8-alpha02 -m 'all: NCO_MAX_CHUNK_SIZE HINT, WARNING; ncatted/ncrename: fl_fmt msg, NC_STRING; ncclimo: --rgn_stt=sum; ncks --chk_map fix area_b dgn';git push --tags

	* ncclimo: Pass flg_sum not rgn_stt to cmd_rgn. Workaround ncap2 syntax errors. Confirm BFB with old avg procedure.

	* ncclimo: Implement --rgn_stt. Make --rgn_avg a synonym for --rgn_stt=avg. Implement --rgn_avg=ttl.

2024-08-21  Charlie Zender  <zender@uci.edu>

	* nco_cnk_sz_set_trv(): Kludgy adjustment to maximum chunk length, add WARNING

	* nco_def_var_chunking(): Add HINT

2024-08-11  Charlie Zender  <zender@uci.edu>

	* ncatted and ncrename now explain (then exit) when user specifies output file type

	* Improve WARNING when ncatted and ncrename will not modify NC_STRING history attributes

2024-08-09  Charlie Zender  <zender@uci.edu>

	* Revert nco_hst_att_cat() NC_STRING feature for ncatted/ncrename (fail at nc_enddef()/nc_close() stage)
